...

    QuickAlert.show(
      context: ctx,
      type: QuickAlertType.confirm,
      title: 'Konfirmasi Pesanan',
      text: 'Apakah Anda yakin ingin membuat pesanan ini?',
      confirmBtnText: 'Ya, Pesan',
      cancelBtnText: 'Batal',
      confirmBtnColor: AppColors.primaryGreen,
      onConfirmBtnTap: () async {
        nav.pop();

        if (!ctx.mounted) return;
...
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    const Icon(Icons.check_circle_outline_rounded,
                        size: 20),
                    const SizedBox(width: 8),
                    Text(
                      'Buat Pesanan',
                      style: GoogleFonts.poppins(
                          fontSize: 14, fontWeight: FontWeight.w700),
                    ),
                  ],
                ),
              ),
...
